--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
    <div class="price">
         <figure>
           <img src="./images/IMG_3969.jpeg" alt="" width="270px" height="270px" />
-          <figcaption>Our Cloths <br>By Tailor Loran <br /> <a href="https://wa.link/yaqaa3"><button>Click Here</button></a></figcaption>
+          <figcaption>Our Cloths <br>By Tailor Loran <br /> <a href="clothings.html"><button>Click Here</button></a></figcaption>
         </figure>
   
       </div>
@@ -40,7 +40,7 @@
       <div class="price">
         <figure>
           <img src="./images/Gallery_20240920_201104.png" alt="" width="270px" height="270px" />
-          <figcaption> Our Perfumes <br>By Segila<br /> <a href="https://wa.link/yaqaa3"><button>Click Here</button></a></figcaption>
+          <figcaption> Our Perfumes <br>By Segila<br /> <a href="perfumes.html"><button>Click Here</button></a></figcaption>
         </figure>
   
       </div>
@@ -49,7 +49,7 @@
       <div class="price">
         <figure>
           <img src="./images/IMG_0974.jpeg" alt="" width="270px" height="270px" />
-          <figcaption>Our Arts <br> By Afrikani <br /> <a href="https://wa.link/yaqaa3"><button>Click Here</button></a></figcaption>
+          <figcaption>Our Arts <br> By Afrikani <br /> <a href="afrikani.html"><button>Click Here</button></a></figcaption>
         </figure>
     
       </div>
