--- a/products.html
+++ b/products.html
@@ -65,7 +65,7 @@
       <div class="price">
         <figure>
           <img src="./new/Gallery_20241106_175046.png" alt="" width="270px" height="270px" />
-          <figcaption>Money Transfer  <br> By Toheeb <br /> <a href="./predictions.html"><button>Click Here</button></a></figcaption>
+          <figcaption>Money Transfer  <br> By Toheeb <br /> <a href="./new/toheeb.html"><button>Click Here</button></a></figcaption>
         </figure>
     
       </div>
