--- a/new/toheeb.html
+++ b/new/toheeb.html
@@ -7,7 +7,7 @@
         .about 
 {
 	text-align: center;
-    color: green;
+    color: blue;
     font-size: 40px;
 }
 #about 
@@ -16,16 +16,16 @@
 }
 h3{
     text-align: center;
-    color: green;
+    color:blue;
     
 }
 button{
-            margin-left: 20px;
+            margin-left: 780px;
             width: 200px;
             height: 30px;
             border-radius: 10px;
             background-color: blue;
-            color: black;
+            color: white;
             font-size: 20px;
             margin-bottom: 0;
         }
