--- a/predictions.html
+++ b/predictions.html
@@ -9,16 +9,27 @@
         h1{
             align-items: center;
             margin-left: 90px;
+            color: green;
 
         }
         table{
             margin-left: 10px;
             font-size: 15px;
         }
+        button{
+            margin-left: 20px;
+            width: 200px;
+            height: 30px;
+            border-radius: 10px;
+            background-color: green;
+            color: white;
+            font-size: 20px;
+            margin-bottom: 0;
+        }
     </style>
 </head>
 <body>
-    <h1>Football Predictions<br> by Apoel</h1>
+    <h1>Football Predictions<br> by Apoel <br><a href="https://wa.link/yaqaa3"><button>VIP</button></a></h1>
     
     <table border="2px" width="400px" height="300px" style="background-color:green;"
     <tr>
