--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
    <div class="price">
         <figure>
           <img src="./images/IMG_3969.jpeg" alt="" width="270px" height="270px" />
-          <figcaption> Our Cloths <br>By Tailor Loran<br /> <a href="perfumes.html"><button>Click Here</button></a></figcaption>
+          <figcaption> Our Cloths <br>By Tailor Loran<br /> <a href="clothings.html"><button>Click Here</button></a></figcaption>
         </figure>
           
   
