--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
             height: 30px;
             border-radius: 10px;
             background-color: blue;
-            color: black;
+            color: white;
             font-size: 20px;
             margin-bottom: 0;
         }
