--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
    
-     <div class="h1">Tailor Loran</div>
+     <div class="h1">Tailor Loran<br>Clothings</div>
 
     <div class="navbar fixed-top">
       
